# django-app

./: requirements.txt
mysite/: Dockerfile  dbdb.sqlite3  demo.py  devices.csv  docker-compose.yaml  log.txt  log.txt.1  log.txt.2  log.txt.3  newdb.sqlite3  orders.csv  pyproject.toml  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml  shopapp.product-export.csv
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/secondblogapp/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/secondblogapp/migrations/: 0001_initial.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: group-fixture.json  order-fixture.json  orders-fixture.json  product-fixture.json  products-fixture.json  user-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_product_created_by.py  0004_alter_order_user_alter_product_created_by.py  0005_alter_order_user_alter_product_created_by.py  0006_order_receipt.py  0007_product_preview.py  0008_productimage.py  0009_alter_order_options_alter_product_options_and_more.py
(+40 files in other folders)
