[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Yauheni Apanas <eternaldespair02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"
docutils = "^0.20.1"
drf-spectacular = "^0.26.4"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^21.2.0"
inflection = "^0.5.1"
jsonschema = "^4.19.0"
mccabe = "^0.7.0"
pillow = "^10.0.0"
pycodestyle = "^2.11.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.1.0"
pyrsistent = "^0.19.3"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
sentry-sdk = "^1.31.0"
snowballstemmer = "^2.2.0"
sqlparse = "^0.4.4"
uritemplate = "^4.1.1"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
